--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.5.0 / ???
 
+* New projects now use Clojure 1.2.1.
+
+* Honor per-repository :update/:checksum policies.
+
+* Allow some repositories to be releases/snapshots-only.
+
+* Honor global :exclusions. (Joe Gallo)
+
 * Honor :class-file-whitelist to make classes/ deletion more manageable.
 
 * Accept :repl-init namespace in project.clj.
