--- a/todo.org
+++ b/todo.org
@@ -49,10 +49,11 @@ See also https://github.com/technomancy/leiningen/issues
     the standard lucene index system that Maven repositories offer.
     This would also mean getting Clojars to produce those indices.
 * For 1.5.1
-  - Revert back to :warn on checksum failure.
-  - Fix LEIN_ROOT warning in bin/lein.
-  - Honor user-settings in more places.
-  - TODO: Place checksums when performing install.
+** TODO
+   - [x] Put :eval-in-lein deps in lib/dev for leiningen process access.
+   - [x] Revert back to :warn on checksum failure.
+   - [x] Fix LEIN_ROOT warning in bin/lein.
+   - [x] Honor user-settings in more places.
 * For 1.5
   - unify auth options between :repositories and :deploy-to
   - suppress socket closed stacktrace in interactive task
