--- a/todo.org
+++ b/todo.org
@@ -23,10 +23,6 @@ See also https://github.com/technomancy/leiningen/issues
     It looks like it would be easy to stop copying things into lib/ and
     just use Maven's notion of the project's dependencies to construct a
     classpath that references jars straight from ~/.m2.
-  - spin lancet off into its own dependency
-    I've never felt comfortable about simply keeping it inline. On the
-    other hand if we quit using ant then we can skip this.
-    Needs to not be in the default package!
   - shell wrappers should support multiple versions
     We could write out a different "foo-$VERSION" shell wrapper for each
     version of a project that gets installed and then have the plain
@@ -44,12 +40,10 @@ See also https://github.com/technomancy/leiningen/issues
   - improve test coverage
   - new push task based on clj-ssh
     lein-clojars task doesn't support DSA keys
-  - add search functionality based on standard mvn lucene indexes
-    lein-search is cool, but it would be better to interoperate with
-    the standard lucene index system that Maven repositories offer.
-    This would also mean getting Clojars to produce those indices.
+  - merge lucene-based lein-search plugin
 * For 1.5.1
 ** TODO
+   - [ ] Move ns docstrings to :help-summary to allow AOT given CLJ-130.
    - [x] Put :eval-in-lein deps in lib/dev for leiningen process access.
    - [x] Revert back to :warn on checksum failure.
    - [x] Fix LEIN_ROOT warning in bin/lein.
