--- a/todo.org
+++ b/todo.org
@@ -37,6 +37,8 @@ See also https://github.com/technomancy/leiningen/issues
   - new push task based on clj-ssh
     lein-clojars task doesn't support DSA keys
 * For 1.6
+  - [x] support ns/name in run task
+  - [ ] take care of multiple versions of plugins in ~/.lein/plugins
   - [x] add option to use ~/.m2-based classpath instead of copying to
         lib/? It looks like it would be easy to stop copying things
         into lib/ and just use Maven's notion of the project's
