--- a/todo.org
+++ b/todo.org
@@ -38,11 +38,11 @@ See also https://github.com/technomancy/leiningen/issues
   - new push task based on clj-ssh
     lein-clojars task doesn't support DSA keys
 * For 1.6
-  - [ ] make search work outside project
   - [ ] suppress useless ant output in classpath calculation for :local-repo-classpath
   - [ ] Trampoline functionality
-  - [x] clear up home directory duality in Windows/MinGW
     http://groups.google.com/group/leiningen/browse_thread/thread/a07a7f10edb77c9b
+  - [x] make search work outside project
+  - [x] clear up home directory duality in Windows/MinGW
   - [x] show total result count in search results
   - [x] transitive native-deps support
   - [x] make :repl-init change initial ns of repl and swank
