--- a/todo.org
+++ b/todo.org
@@ -38,11 +38,10 @@ See also https://github.com/technomancy/leiningen/issues
   - new push task based on clj-ssh
     lein-clojars task doesn't support DSA keys
 * For 1.6
-  - [ ] move exit-after-tests check to eval-in-project (discuss on list?)
-  - [ ] upgrade new task
   - [ ] suppress useless ant output in classpath calculation for :local-repo-classpath
   - [ ] Trampoline functionality
     http://groups.google.com/group/leiningen/browse_thread/thread/a07a7f10edb77c9b
+  - [x] move exit-after-tests check to eval-in-project (discuss on list?)
   - [x] don't freak out when attempting to download non-existent indices
   - [x] improve error message for unconfigured deploy
   - [x] make search work outside project
