--- a/todo.org
+++ b/todo.org
@@ -11,6 +11,13 @@ See also https://github.com/technomancy/leiningen/issues
   - Aether: how would it integrate? Improvement over maven-ant-tasks?
   - Tests in Nailgun: would it require a separate shell script?
   - How could nonlinear versions be represented?
+* Debian packaging
+  - [ ] fix libmaven-ant-tasks-java
+  - [ ] package contrib 1.2
+  - [ ] package clucy, lancet, hooke?
+        jh_installlibs
+  - [ ] convert NEWS to changelog
+  - [ ] rules: binary
 * For 2.0
   - make it easier to hook inside eval-in-project
   - Quit using ant's Java task. It is horrible.
