--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.6.1 / TBD
+
+* Support for .classpath file to include context specific classpath elements.
+
 = 1.6.0 / 2011-06-29
 
 * Enforce project names as readable symbols.
