--- a/todo.org
+++ b/todo.org
@@ -31,8 +31,8 @@ See also https://github.com/technomancy/leiningen/issues
   - [X] upgrade hooke
   - [X] make it easier to use :repl-options [:print clojure.pprint/pprint]
   - [X] fix shutdown-agents with repl
+  - [X] don't clear out lib/dev upon jarring (221)
   - [ ] investigate lein-multi failure
-  - [ ] don't clear out lib/dev upon jarring (221)
 * For 1.6
   - [X] Trampoline functionality
   - [X] move exit-after-tests check to eval-in-project (discuss on list?)
