Re-word docs in favour of the term "project automation".

--- a/doc/lein.1
+++ b/doc/lein.1
@@ -1,7 +1,7 @@
 ./"to render: groff -Tascii -man doc/lein.1 > lein.man"
 .TH LEININGEN 1 "2011 June 30"
 .SH NAME
-lein \- Build Clojure projects
+lein \- Automate Clojure projects
 
 .SH SYNOPSIS
 
@@ -10,11 +10,11 @@ lein \- Build Clojure projects
 
 .SH DESCRIPTION
 
-Leiningen is a build tool for Clojure designed to not set your hair on fire.
+Leiningen is for automating Clojure projects without setting your hair
+on fire.
 
-Building Clojure projects with tools designed for Java can be an
-exercise in frustration. With Leiningen, you describe your build with
-Clojure.
+Working on Clojure projects with tools designed for Java can be an
+exercise in frustration. With Leiningen, you just write Clojure.
 
 .SH TASKS
 
