--- a/todo.org
+++ b/todo.org
@@ -27,13 +27,22 @@ See also https://github.com/technomancy/leiningen/issues
   - suppress useless ant output in classpath calculation for :local-repo-classpath
   - new push task based on clj-ssh
     lein-clojars task doesn't support DSA keys
+* For 1.6.2
+  - [ ] resources with eval-in-leiningen (#248)
+  - [ ] signed deps for plugins (#247)
+  - [ ] investigate interactive failures with 1.3 (#234)
+  - [ ] remove bashisms (#246)
+  - [ ] windows issues with plugin install swank (#252)
+  - [ ] non-jar deps on classpath (#244)
+  - [ ] use java class for :main (#249)
+  - [ ] self-install in current directory (#254)
 * For 1.6.1
   - [X] upgrade hooke
   - [X] make it easier to use :repl-options [:print clojure.pprint/pprint]
   - [X] fix shutdown-agents with repl
   - [X] don't clear out lib/dev upon jarring (221)
   - [X] support alternate main namespace for uberjar.
-* For 1.6
+* For 1.6.0
   - [X] Trampoline functionality
   - [X] move exit-after-tests check to eval-in-project (discuss on list?)
   - [X] don't freak out when attempting to download non-existent indices
@@ -45,11 +54,7 @@ See also https://github.com/technomancy/leiningen/issues
   - [X] make :repl-init change initial ns of repl and swank
   - [X] more flexibility in search results
   - [X] support ns/name in run task
-  - [X] add option to use ~/.m2-based classpath instead of copying to
-        lib/? It looks like it would be easy to stop copying things
-        into lib/ and just use Maven's notion of the project's
-        dependencies to construct a classpath that references jars
-        straight from ~/.m2.
+  - [X] add option to use ~/.m2-based classpath instead of copying to lib/
   - [X] Merge lein-search
   - [X] Merge lein-retest
   - [X] Merge native-deps
@@ -61,7 +66,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Revert back to :warn on checksum failure.
    - [X] Fix LEIN_ROOT warning in bin/lein.
    - [X] Honor user-settings in more places.
-* For 1.5
+* For 1.5.0
   - unify auth options between :repositories and :deploy-to
   - suppress socket closed stacktrace in interactive task
   - checksum deps set; don't re-download if unchanged
@@ -71,7 +76,7 @@ See also https://github.com/technomancy/leiningen/issues
   - failure to upgrade leaves lein as a zero-length file (#153)
   - ensure project jar is last in uberjar (#178)
   - investigate uberjar slowdown? (#160)
-* For 1.4
+* For 1.4.0
   - socket timing issues with interactive tests
   - connect to socket repl in interactive task
   - :uberjar-exclusions?
