--- a/todo.org
+++ b/todo.org
@@ -16,7 +16,6 @@ See also https://github.com/technomancy/leiningen/issues
     Try a custom classloader approach?
   - Use Aether instead of maven-ant-tasks?
     http://www.sonatype.com/people/2010/08/introducing-aether/
-    Could also allow us to fix :omit-default-repositories wrt central
   - classifiers for specifying what clojure version to use?
     As more versions of Clojure start to exist, libraries may want to
     publish different branches that target different versions of
@@ -29,6 +28,7 @@ See also https://github.com/technomancy/leiningen/issues
     lein-clojars task doesn't support DSA keys
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
+  - [X] fix :omit-default-repositories wrt central (#211)
   - [ ] signed deps for plugins (#247)
   - [ ] investigate interactive failures with 1.3 (#234)
   - [ ] remove bashisms (#246)
