--- a/doc/lein.1
+++ b/doc/lein.1
@@ -1,4 +1,4 @@
-./"to render: groff -Tascii -man doc/lein.1 > lein.man"
+.\"to render: groff -Tascii -man doc/lein.1 > lein.man"
 .TH LEININGEN 1 "2011 June 30"
 .SH NAME
 lein \- Automate Clojure projects
