--- a/todo.org
+++ b/todo.org
@@ -30,6 +30,7 @@ See also https://github.com/technomancy/leiningen/issues
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
   - [X] fix :omit-default-repositories wrt central (#211)
+  - [X] deps should run an implicit clean
   - [ ] signed deps for plugins (#247)
   - [ ] investigate interactive failures with 1.3 (#234)
   - [ ] remove bashisms (#246)
