--- a/todo.org
+++ b/todo.org
@@ -31,6 +31,7 @@ See also https://github.com/technomancy/leiningen/issues
   - [X] resources with eval-in-leiningen (#248)
   - [X] fix :omit-default-repositories wrt central (#211)
   - [X] deps should run an implicit clean
+  - [ ] don't let multiple versions of a plugin interfere with each other (#301)
   - [ ] signed deps for plugins (#247)
   - [ ] investigate interactive failures with 1.3 (#234)
   - [ ] recover from errors in repl task (#286)
