--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,35 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.6.2 / ???
 
+* Allow Leiningen home to exist inside project directory. (Heinz N. Gies)
+
+* Remove old versions of plugins when upgrading.
+
+* Add user-level :deploy-repositories list. (Michał Marczyk)
+
+* Fix a bug where class files from proxy objects weren't considered
+  part of the project. (Stephen Compall)
+
+* Make deps cause implicit clean to avoid AOT version mismatches.
+
+* Include Java source files in jar. (Nathan Marz)
+
+* Add separate :deploy-repositories list. (Chas Emerick)
+
+* Maintain order in repositories list. (Colin Jones)
+
+* Fix a bug where :omit-default-repos wouldn't skip Maven Central. (Chas Emerick)
+
+* Make deps extract native dependencies for all architectures, not just current.
+
+* Fix page count on search results.
+
+* Fix a bug where "lein plugin install" could skip dependencies.
+
+* Reimplement eval-in-project to use clojure.java.shell instead of Ant.
+
+* Separate LEIN_JVM_OPTS from JVM_OPTS.
+
 = 1.6.1.1 / 2011-09-06
 
 * Turn off workaround for Clojure's agent thread pool keeping the JVM alive 
