--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.6.2 / ???
 
+* Let run task work with main functions from Java classes.
+
 * Fix bug where exceptions would break interactive task.
 
 * Default to Clojure 1.3.0 for new projects.
