--- a/todo.org
+++ b/todo.org
@@ -15,9 +15,7 @@ See also https://github.com/technomancy/leiningen/issues
   - [X] non-jar deps on classpath (#244)
   - [X] recover from error in interactive (#234)
   - [X] use java class in run task (#249)
-  - [ ] fix deploy with new maven-ant-tasks
-  - [ ] signed deps for plugins (#247)
-  - [ ] jvm-specific deps (JSR 310)
+  - [X] fix deploy with new maven-ant-tasks
 * For 1.6.1
   - [X] upgrade hooke
   - [X] make it easier to use :repl-options [:print clojure.pprint/pprint]
