--- a/todo.org
+++ b/todo.org
@@ -26,7 +26,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Allow disabling of all injected code
    - [ ] Drop clojars snapshots from default repos
 ** Adapt existing tasks to new API
-   - [ ] classpath
+   - [X] classpath
    - [X] clean
    - [ ] compile
    - [ ] deploy
