Update TODOs for 1.7.0 release.

--- a/todo.org
+++ b/todo.org
@@ -2,9 +2,14 @@ Leiningen TODOs
 
 See also https://github.com/technomancy/leiningen/issues
 
-* For 1.6.3
+* For 1.7.0
   - [X] System/exit in repl (#324)
-  - [ ] Fix JVM_OPTS escaping
+  - [ ] NPE in deploy (#350)
+  - [ ] whole-namespace test selectors (#242)
+  - [ ] I/O slowdown when testing (#335)
+  - [ ] interactive task takes full CPU (#346)
+  - [ ] clojure-sources in dev-deps causes failure booting (#355)
+  - [ ] Fix JVM_OPTS escaping (#326)
   - [ ] help task in Windows doesn't show text (#323)
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
