--- a/todo.org
+++ b/todo.org
@@ -4,12 +4,13 @@ See also https://github.com/technomancy/leiningen/issues
 
 * For 1.7.0
   - [X] System/exit in repl (#324)
+  - [X] interactive task takes full CPU (#346)
   - [ ] NPE in deploy (#350)
   - [ ] whole-namespace test selectors (#242)
   - [ ] I/O slowdown when testing (#335)
-  - [ ] interactive task takes full CPU (#346)
   - [ ] Fix JVM_OPTS escaping (#326)
   - [ ] help task in Windows doesn't show text (#323)
+  - double-check 309
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
   - [X] fix :omit-default-repositories wrt central (#211)
