TODO updates, separate out tasks targeted for 2.0.0-preview.

--- a/todo.org
+++ b/todo.org
@@ -9,44 +9,45 @@ See also https://github.com/technomancy/leiningen/issues
 
 * For 2.0.0
 ** Big Picture
-   - [ ] Finish designing and implement profiles
-     - [ ] figure out how old no-dev functionality fits in
+   - [X] Finish designing and implement profiles
    - [ ] Further design on Project Middleware
    - [ ] In-process eval-in-project
    - [ ] Dynamic recalculating of classpath via pomegranate
    - [ ] Redesign repl task, possibly around nREPL
+   - [ ] Honor :plugins as separate from :dependencies
 ** Other stuff
    - [ ] Move pom generation to pomegranate or leiningen
    - [ ] Better consistency/docs around user/settings
    - [ ] Non-transitive AOT
    - [ ] lint/check mode for lein compile
-   - [ ] ns-level test selectors
-   - [ ] More flexibility for jarring
+   - [X] More flexibility for jarring
    - [ ] Mirror/proxy support, also for search indices
    - [ ] Allow disabling of all injected code
    - [ ] Drop clojars snapshots from default repos
 ** Adapt existing tasks to new API
+*** Tasks for 2.0.0-preview
    - [X] classpath
    - [X] clean
-   - [X] compile
-         (tests still a mess!)
-   - [ ] deploy
-   - [X] deps (mostly done in leiningen.core.classpath)
-         (tests still a mess!)
-   - [ ] help
-   - [ ] install
-   - [ ] jar
-   - [ ] javac (can we do this without ant?)
-   - [ ] new (merge from lein-newnew)
-   - [ ] plugin
-   - [ ] pom (steal from depot)
-   - [ ] repl (figure out nrepl integration)
+   - [X] compile (minus transitive cleaning)
+   - [X] deps (minus native-deps and certain :repositories options)
+   - [X] test
+   - [X] jar (minus shell wrappers)
    - [X] retest
    - [X] run
-   - [X] search
-   - [X] test
-   - [ ] trampoline
+   - [X] new (merge from lein-newnew)
+   - [X] help (needs tests)
+   - [ ] pom (steal from depot)
+   - [ ] install (minus shell wrappers)
    - [ ] uberjar
+   - [ ] repl (figure out nrepl integration)
+*** Tasks for full release (currently tagged :busted)
+   - [ ] deps (native-deps and :repositories options)
+   - [ ] compile (transitive cleaning)
+   - [ ] shell wrappers
+   - [ ] deploy
+   - [ ] javac (can we do this without ant?)
+   - [ ] search
+   - [ ] trampoline
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
   - [X] fix :omit-default-repositories wrt central (#211)
