Update readme for lein2.

--- a/doc/lein.1
+++ b/doc/lein.1
@@ -41,7 +41,7 @@ launch an interactive REPL session and socket server
 package up the whole project as a .jar file
 .TP
 \fBlein install [NAME VERSION]\fR
-install a project
+install a project into your local repository
 
 .SH CONFIGURATION
 
@@ -82,7 +82,7 @@ file and as much of the relevant code from your project as possible.
 Copyright
 .if t \(co
 .if n (C)
-2009-2011 Phil Hagelberg and contributors.
+2009-2012 Phil Hagelberg and contributors.
 
 Distributed under the Eclipse Public License, the same as Clojure
 uses. See the file /usr/share/doc/leiningen/copyright.
