--- a/todo.org
+++ b/todo.org
@@ -13,19 +13,20 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Further design on Project Middleware
    - [ ] In-process eval-in-project
    - [X] Dynamic recalculating of classpath via pomegranate
-   - [ ] Redesign repl task, possibly around nREPL
+   - [ ] Redesign repl task, possibly around nREPL and/or reply
    - [X] Honor :plugins as separate from :dependencies
-   - [ ] Add :dynamic metadata to clucy
-   - [ ] Update documentation
+   - [-] Update documentation
      - [X] readme
      - [X] plugin guide
      - [X] tutorial
-     - [ ] hacking guide
+     - [X] hacking guide (moved to leiningen-core readme)
      - [ ] migration guide
      - [ ] user settings
      - [ ] deploy guide
      - [ ] sample project.clj
 ** Other stuff
+   - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
+   - [ ] Rework prep function to ensure that AOT/javac happens when needed
    - [ ] Move pom generation to pomegranate or leiningen
    - [ ] Non-transitive AOT
    - [X] More flexibility for jarring
