Copy pom.xml generation from depot
Take some code from depot
Take the git scm code from lein 1.x
Update sample.project.clj with multiple source/test directories and extensions
Creates a similiar pom for sample.project.clj as lein 1.x
Use build-helper-maven-plugin for multiple source directories

--- a/todo.org
+++ b/todo.org
@@ -30,7 +30,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Allow tasks to add in their own injections
    - [ ] Accept more flexible :repositories args for pomegranate 0.0.2
    - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
-   - [ ] Move pom generation to pomegranate or leiningen
+   - [X] Move pom generation to pomegranate or leiningen
    - [ ] Non-transitive AOT
    - [X] More flexibility for jarring
    - [ ] Mirror/proxy support, also for search indices
@@ -50,7 +50,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] new (merge from lein-newnew)
    - [X] help (needs tests)
    - [X] search
-   - [ ] pom (steal from depot)
+   - [X] pom (steal from depot)
    - [ ] install (minus shell wrappers)
    - [ ] uberjar
    - [ ] repl (figure out nrepl integration)
