--- a/todo.org
+++ b/todo.org
@@ -8,41 +8,45 @@ Leiningen TODOs
 See also https://github.com/technomancy/leiningen/issues
 
 * For 2.0.0
-** Big Picture
+** Changes for preview release
    - [X] Finish designing and implement profiles
-   - [ ] Further design on Project Middleware
-   - [ ] In-process eval-in-project
    - [X] Dynamic recalculating of classpath via pomegranate
-   - [ ] Redesign repl task, possibly around nREPL and/or reply
    - [X] Honor :plugins as separate from :dependencies
-   - [-] Update documentation
-     - [X] readme
-     - [X] plugin guide
-     - [X] tutorial
-     - [X] hacking guide (moved to leiningen-core readme)
-     - [ ] migration guide
-     - [ ] user settings
-     - [ ] deploy guide
-     - [ ] sample project.clj
-     - [ ] document adding javadoc/java source as deps
-** Other stuff
-   - [ ] Rework prep function to ensure that AOT/javac happens when needed
-   - [ ] Allow tasks to add in their own injections
-   - [-] Accept more flexible :repositories args for pomegranate 0.0.4
-   - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
+   - [X] Rework prep function to ensure that AOT/javac happens when needed
    - [X] Move pom generation to pomegranate or leiningen
-   - [ ] Non-transitive AOT
    - [X] More flexibility for jarring
-   - [ ] Mirror/proxy support, also for search indices
-   - [ ] Allow disabling of all injected code
+   - [ ] Hook up reply to nrepl for new repl task?
+   - [ ] Resurrect native deps?
    - [ ] Honor hooks declared in plugin jar metadata?
+   - [ ] Allow tasks to add in their own injections
+   - [ ] Allow disabling of all injected code
+   - [ ] Pass user-level repository auth settings on to pomegranate.
+   - [ ] In-process eval-in-project? (possibly post-preview)
+** Other stuff (post-preview)
+   - [ ] Further design on Project Middleware
+   - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
+   - [ ] Non-transitive AOT
+   - [ ] Mirror/proxy support, also for search indices
    - [ ] Drop clojars snapshots from default repos
+   - [ ] compile (transitive cleaning)
+   - [ ] shell wrappers
+   - [ ] javac (can we do this without ant?)
+   - [ ] trampoline
+** Documentation
+   - [X] readme
+   - [X] plugin guide
+   - [X] tutorial
+   - [X] hacking guide (moved to leiningen-core readme)
+   - [ ] migration guide
+   - [ ] user settings
+   - [ ] deploy guide
+   - [ ] sample project.clj
+   - [ ] document adding javadoc/java source as deps
 ** Adapt existing tasks to new API
-*** Tasks for 2.0.0-preview
    - [X] classpath
    - [X] clean
    - [X] compile (minus transitive cleaning)
-   - [X] deps (minus native-deps and certain :repositories options)
+   - [X] deps
    - [X] test
    - [X] jar (minus shell wrappers)
    - [X] retest
@@ -53,14 +57,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] pom (steal from depot)
    - [X] install (minus shell wrappers)
    - [X] uberjar
-   - [ ] repl (figure out nrepl integration)
-*** Tasks for full release (currently tagged :busted)
-   - [ ] deps (native-deps and :repositories options)
-   - [ ] compile (transitive cleaning)
-   - [ ] shell wrappers
    - [X] deploy
-   - [ ] javac (can we do this without ant?)
-   - [ ] trampoline
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
   - [X] fix :omit-default-repositories wrt central (#211)
