--- a/todo.org
+++ b/todo.org
@@ -5,11 +5,14 @@ See also https://github.com/technomancy/leiningen/issues
 * For 1.7.0
   - [X] System/exit in repl (#324)
   - [X] interactive task takes full CPU (#346)
+  - [X] whole-namespace test selectors (#242)
+  - [X] Auto-exclusions for dev-deps and plugins (#375)
+  - [ ] Write plugin migration guide for 2.0; determine and back-port features
+  - [ ] Emit build extensions in pom (#365) (patch on the way)
+  - [ ] Fix search with :omit-default-repos (#361)
   - [ ] NPE in deploy (#350)
-  - [ ] whole-namespace test selectors (#242)
   - [ ] I/O slowdown when testing (#335)
   - [ ] Fix JVM_OPTS escaping (#326)
-  - [ ] help task in Windows doesn't show text (#323)
   - double-check 309
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
