--- a/todo.org
+++ b/todo.org
@@ -22,6 +22,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Honor hooks declared in plugin jar metadata?
    - [ ] Pass user-level repository auth settings on to pomegranate.
    - [ ] In-process eval-in-project? (possibly post-preview)
+   - [ ] Address chaining issues in with-profile
 ** Other stuff (post-preview)
    - [ ] Further design on Project Middleware
    - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
