--- a/todo.org
+++ b/todo.org
@@ -8,12 +8,8 @@ See also https://github.com/technomancy/leiningen/issues
   - [X] whole-namespace test selectors (#242)
   - [X] Auto-exclusions for dev-deps and plugins (#375)
   - [ ] Write plugin migration guide for 2.0; determine and back-port features
-  - [ ] Emit build extensions in pom (#365) (patch on the way)
-  - [ ] Fix search with :omit-default-repos (#361)
-  - [ ] NPE in deploy (#350)
-  - [ ] I/O slowdown when testing (#335)
-  - [ ] Fix JVM_OPTS escaping (#326)
-  - double-check 309
+  - [ ] Investigate NPE on lein test (#388)
+  - [ ] Bring back rlwrap (#381)
 * For 1.6.2
   - [X] resources with eval-in-leiningen (#248)
   - [X] fix :omit-default-repositories wrt central (#211)
