--- a/todo.org
+++ b/todo.org
@@ -19,9 +19,11 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Allow disabling of all injected code
    - [ ] Hook up reply to nrepl for new repl task?
    - [ ] Resurrect native deps?
+   - [ ] Activate :test profile in test task
    - [ ] Honor hooks declared in plugin jar metadata?
    - [ ] Pass user-level repository auth settings on to pomegranate.
    - [ ] In-process eval-in-project? (possibly post-preview)
+   - [ ] Allow hooks to provide activate fn to avoid load-time side-effects
    - [ ] Address chaining issues in with-profile
 ** Other stuff (post-preview)
    - [ ] Further design on Project Middleware
