--- a/todo.org
+++ b/todo.org
@@ -17,9 +17,9 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] More flexibility for jarring
    - [X] Allow tasks to add in their own injections
    - [X] Allow disabling of all injected code
+   - [X] Activate :test profile in test task
    - [ ] Hook up reply to nrepl for new repl task?
    - [ ] Resurrect native deps?
-   - [ ] Activate :test profile in test task
    - [ ] Honor hooks declared in plugin jar metadata?
    - [ ] Pass user-level repository auth settings on to pomegranate.
    - [ ] In-process eval-in-project? (possibly post-preview)
